--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Converter</string>
+    <string name="enter_amount_hint">Enter an amount</string>
 </resources>
