--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="no_network_error">No network</string>
     <string name="incorrect_amount">The value is not correct</string>
     <string name="no_such_currency">No such currency</string>
+    <string name="refresh_too_early">You can refresh again in %1$d minutes</string>
 </resources>
